<resources>
    <string name="app_name">CookBook By Mehnaz</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_category">Categories</string>
    <string name="menu_favorite">Favorite dishes</string>
    <string name="menu_top_dishes">Top dishes</string>
    <string name="menu_tips_tricks"><![CDATA[Tips&Tricks]]></string>
    <string name="menu_shortcuts">Shortcut Items</string>
    <string name="menu_settings">Settings</string>
</resources>
